# prompt-architecture-checker

./: .gitignore  README.md  SKILL.md  output-format.md  pyproject.toml  reviewer-prompt.md
.github/workflows/: release.yml
docs/: lint-rules.md  vision.md
docs/superpowers/plans/: 2026-04-14-prompt-architecture-reviewer-skill.md  2026-04-15-parse-review-report-doc-alignment.md  2026-04-16-parse-review-report-cli-implementation.md
docs/superpowers/specs/: 2026-04-14-prompt-architecture-reviewer-skill-design.md  2026-04-15-parse-review-report-scope-design.md  2026-04-16-parse-review-report-cli-entrypoints-design.md
examples/: sample-parse-summary.md  sample-report.md  sample-review-findings.md
examples/bad-repo/: README.md  expected-review.md  orchestrator.instructions.md
examples/good-repo/: README.md  expected-review.md
examples/good-repo/contracts/: ui-test-orchestrator.contract.json
examples/mixed-repo/: README.md  expected-review.md
examples/mixed-repo/contracts/: release-workflow.contract.json
schemas/: prompt-contract.schema.json
skills/review-skill/: SKILL.md
src/prompt_architecture_checker/: cli.py  config.py  contracts.py  orchestrator.py  output.py  prompt_builder.py  runner.py  skill_assets.py
src/prompt_architecture_checker/assets/skills/parse-skill/: SKILL.md
src/prompt_architecture_checker/assets/skills/report-skill/: SKILL.md
src/prompt_architecture_checker/assets/skills/review-skill/: SKILL.md
tests/: conftest.py  test_cli_errors.py  test_cli_help.py  test_cli_parse.py  test_cli_report.py  test_cli_review.py  test_orchestrator.py  test_runner.py  test_skill_assets.py
